--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,12 @@
+# postgres
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.hibernate.ddl-auto=none
 
+spring.datasource.url=jdbc:postgresql://localhost:5432/todo
+spring.datasource.username=postgres
+spring.datasource.password=12345678
+
+# liquibase
+#Liquibase
+spring.liquibase.change-log=classpath:db/changelog/liquibase-changelog.xml
+spring.liquibase.enabled=true
