--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,5 +8,5 @@ spring.datasource.password=12345678
 
 # liquibase
 #Liquibase
-spring.liquibase.change-log=classpath:db/changelog/liquibase-changelog.xml
+spring.liquibase.change-log=classpath:db/liquibase-changelog.xml
 spring.liquibase.enabled=true
